<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.welcome.WelcomeFragment">

    <data>
        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.screens.welcome.WelcomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            style="@android:style/Widget.Material.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/welcome_title_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/bodyTextView"
            style="@style/textsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/welcome_body_text" />

        <Button
            android:id="@+id/continueButton"
            style="@style/buttonsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> welcomeViewModel.continueToInstructions()}"
            android:text="@string/continue_button" />
    </LinearLayout>
</layout>