<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.details.ShoeDetailsFragment">

    <data>
        <variable
            name="detailsViewModel"
            type="com.udacity.shoestore.screens.details.ShoeDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22000003" />

        <TextView
            android:id="@+id/nameLabel"
            style="@style/textLabelsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/nameEditText"
            style="@style/textInputsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:enabled="@{detailsViewModel.enabled}"
            android:hint="@string/name"
            android:inputType="text"
            android:text="@={detailsViewModel.shoeEdit.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/sizeLabel"
            style="@style/textLabelsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sizeEditText" />

        <EditText
            android:id="@+id/sizeEditText"
            style="@style/textInputsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:enabled="@{detailsViewModel.enabled}"
            android:hint="@string/size"
            android:inputType="numberDecimal"
            android:text="@={`` + detailsViewModel.shoeEdit.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <TextView
            android:id="@+id/companyLabel"
            style="@style/textLabelsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/companyEditText" />

        <EditText
            android:id="@+id/companyEditText"
            style="@style/textInputsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:enabled="@{detailsViewModel.enabled}"
            android:hint="@string/company"
            android:inputType="text"
            android:text="@={detailsViewModel.shoeEdit.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeEditText" />

        <TextView
            android:id="@+id/descriptionLabel"
            style="@style/textLabelsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/descriptionEditText" />

        <EditText
            android:id="@+id/descriptionEditText"
            style="@style/textInputsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:enabled="@{detailsViewModel.enabled}"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:text="@={detailsViewModel.shoeEdit.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyEditText" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/buttonsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> detailsViewModel.cancelEdit()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintStart_toStartOf="@+id/descriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

        <Button
            android:id="@+id/save_button"
            style="@style/buttonsStyling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:enabled="@{detailsViewModel.enabled}"
            android:onClick="@{() -> detailsViewModel.saveShoe()}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/descriptionEditText"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>